changes to MenuItem: id to itemId. getItemId to getId. setItemId to setId. setId validation from null to 0L